Improve styling on input

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <body>
     <div id="form-container">
       <form id="mess-form">
-        <input id="message" type="text" placeholder="Focus on..."/>
+        <input class="fokus-input"
+          id="message" type="text" placeholder="Focus on..."/>
       </form>
     </div>
     <div id="words-container">
