Fix styling on input
Center the input field (mostly). Change the font size. Make the cursor
red. Turn off spell checking.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="form-container">
       <form id="mess-form">
-        <input class="fokus-input"
+        <input class="fokus-input" spellcheck="false"
           id="message" type="text" placeholder="Focus on..."/>
       </form>
     </div>
