Improve styling of form and focus
Form is now text-aligned center so that when you press enter the words
you typed line up with the words that appear. Also set max length on
form input a) for style purposes b) because focuses should be concise

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <div id="form-container">
+    <div id="form-container" class="flex-container">
       <form id="mess-form">
-        <input class="fokus-input" spellcheck="false"
+        <input class="fokus-input" spellcheck="false" maxlength="32"
           id="message" type="text" placeholder="Focus on..."/>
       </form>
     </div>
-    <div id="words-container">
+    <div id="words-container" class="flex-container">
     </div>
     <script type="text/javascript" src="main.js"></script>
   </body>
